@@ -4,7 +4,7 @@
     package="org.ttrssreader"
     android:installLocation="auto"
     android:versionName="0.9.3"
-    android:versionCode="930"
+    android:versionCode="931"
 >
 
     <application
